--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Curtis Rodgers",
   "license": "MIT",
   "dependencies": {
+    "frow": "^1.3.0",
+    "normalize.css": "^5.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
@@ -38,6 +40,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.0",
     "json-loader": "^0.5.4",
+    "node-sass": "^3.10.1",
     "postcss-loader": "^1.0.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
