--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-promise": "^0.5.3",
