Added watch mode, removed proxies

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "scripts": {
     "test": "",
     "start": "node server",
+    "watch" : "rimraf dist && webpack --config ./webpack.production.config.js --progress --profile --colors --watch",
     "build": "rimraf dist && webpack --config ./webpack.production.config.js --progress --profile --colors"
   },
   "author": "Curtis Rodgers",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.15.2",
     "bootstrap-grid": "file:./node_modules/bootstrap-grid",
     "lodash": "^4.16.4",
     "react": "^15.3.2",
